Remove gaps from the gridlines of single-grid and old-school floors. Also fix #108 by only using a single background.

--- a/public/app/themes/graph_paper_single/style.css
+++ b/public/app/themes/graph_paper_single/style.css
@@ -4,8 +4,9 @@
 }
 
 .floor-cell {
-  border-color: white;
+  border-color: transparent;
   image-rendering: pixelated;
+  background-clip: border-box;
 }
 
 .menu-item .floor-cell {
